# pidilite_datawiz

./: .gitignore  be-1.conf  be-2.conf  be-3.conf  be-4.conf  docker-compose.yml  fe.conf  init-starrocks.sh  pyproject.toml
core/extractors/: __init__.py  azure_extractor.py
core/jobs/: __init__.py
core/loaders/: __init__.py  insert_records.py  rls_mapper.py
core/transformers/: __init__.py  parquet_cleaner.py
db/: create_tables.py  load_seed_data.py  schema.py
db/column_mappings/: 01_DimMaterialMapping.json  02_DimCustomerMaster.json  03_DimDealerMaster.json  04_DimHierarchy.json  05_DimSalesGroup.json  06_DimMaterial.json  07_FactInvoiceDetails.json  08_FactInvoiceSecondary.json  09_RlsMaster.json  DimCustomerMaster.json  DimDealerMaster.json  DimHierarchy.json  DimMaterial.json  DimSalesGroup.json  FactInvoiceDetails.json  FactInvoiceSecondary.json  RlsMaster.json
db/schemas/: 01_DimMaterialMapping.py  02_DimCustomerMaster.py  03_DimDealerMaster.py  04_DimHierarchy.py  05_DimSalesGroup.py  06_DimMaterial.py  07_FactInvoiceDetails.py  08_FactInvoiceSecondary.py  09_RlsMaster.py  __init__.py
db/seeds/: SEED_MAPPING.py
utils/: reserved_keywords.py  schema_validator.py
